[gd_scene load_steps=6 format=2]

[ext_resource path="res://cerita/cerita.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/cerita/scene11/Scene_11.png" type="Texture" id=2]
[ext_resource path="res://asset/cerita/scene11/Narasi_Scene11.wav" type="AudioStream" id=3]
[ext_resource path="res://cerita/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://cerita/scene11/Scene11.gd" type="Script" id=5]

[node name="Scene11" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="TextureRect" parent="Control" index="0"]
texture = ExtResource( 2 )

[node name="Panel" parent="Control" index="1"]
margin_left = 96.0
margin_top = 24.0
margin_right = 1128.0
margin_bottom = 144.0

[node name="Label" type="Label" parent="Control/Panel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Saat acara penobatan, keris pemberian raja mataram digunakan untuk mengikat rambut. 
dan Orang kayo hitam juga ditawarkan untuk menjadi wakil kerajaan mataram. 
Namun, orang kayo hitam lebih memilih untuk kembali ke kerajaan melayu jambi."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="narasi" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource( 3 )

[node name="Tween" type="Tween" parent="." index="2"]
[connection signal="pressed" from="Control/Panel2/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/Panel2/mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="Control/controlCerita/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Control/controlCerita/next" to="." method="_on_next_pressed"]
[connection signal="finished" from="narasi" to="." method="_on_narasi_finished"]
